More edits, needs alignment fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2214,14 +2214,6 @@ input, select, textarea {
 		list-style: none;
 		padding: 0;
 	}
-
-		ul.labeled-icons li {
-			line-height: 1.75em;
-			margin: 1.5em 0 0 0;
-			padding-left: 2.25em;
-			position: relative;
-		}
-
 			ul.labeled-icons li:first-child {
 				margin-top: 0;
 			}
@@ -2232,11 +2224,7 @@ input, select, textarea {
 
 			ul.labeled-icons li h3 {
 				color: #b2b2b2;
-				left: 0;
 				position: absolute;
-				text-align: center;
-				top: 0;
-				width: 1em;
 			}
 
 /* Actions */
